# NewsRecSys

./: .gitignore  main.py  pyproject.toml  run.sh
src/method1/: model.py
src/method2/: dataset.py  lightning_module.py  model.py  train.py  utils.py
